<resources>
    <string name="app_name">BlissfullTouch</string>
    <string name="what_you_are_looking_for">what you are looking for?</string>
    <string name="what_you_are_looking_for1">what you are looking for</string>
    <string name="home">HOME</string>
    <string name="manicure_and_pedicure">manicure and pedicure</string>
    <string name="nail_care_treatments_to_beautify_and_pamper_hands_and_feet">nail care treatments to beautify and pamper hands and feet.</string>
    <string name="add">add</string>
    <string name="more">more</string>
    <string name="add1">add</string>
    <string name="more1">more</string>
    <string name="moroccan_bath">moroccan bath</string>
    <string name="des1">traditional steam cleansing and exfoliation for smooth refreshed skin</string>
    <string name="boxfordesser3">boxfordesser3</string>
    <string name="add2">add</string>
    <string name="more2">more</string>
    <string name="des2">hot stone massage</string>
    <string name="des3">provides ultimate relaxation and can help ease muscle tension and damaged soft tissues as heated stones are carefully placed on your body</string>
    <string name="buttonfotsorting">buttonfotsorting</string>
    <string name="boxfordesplyngser">boxfordesplyngser</string>
    <string name="boxfordesplyngser2">boxfordesplyngser2</string>
    <string name="boximg3">boximg3</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="review">review</string>
    <string name="swedish_massage">swedish_massage</string>
    <string name="swedish_massage1">swedish massage</string>
    <string name="date_10_7_2024">date 10 7 2024</string>
    <string name="time_8pm">time: 8pm</string>
    <string name="date_10_7_20241">date: 10 7 2024</string>
    <string name="date_10_7_202411">date: 10/7/2024</string>
    <string name="in_spa">In_spa</string>
    <string name="secondimg">secondimg</string>
    <string name="edit1">edit</string>
    <string name="date_19_4_2024">date:19/4/2024</string>
    <string name="time_12pm">time: 12pm</string>
    <string name="in_spa1">In spa</string>
    <string name="img">img</string>
    <string name="date_26_3_2024">date: 26/3/2024</string>
    <string name="time_5pm">time: 5pm</string>
    <string name="in_home">In home</string>
    <string name="my_reservations">My reservations</string>
    <string name="home1">HOME</string>
    <string name="forsorting">forsorting</string>
    <string name="mani">mani</string>
    <string name="serdes">nail care treatments to beautify and pamper hands and feet</string>
    <string name="sername">manicure and pedicure</string>
    <string name="more12">more</string>
    <string name="add12">add</string>
    <string name="box">box</string>
    <string name="edit22">edit</string>
    <string name="confirm">confirm deleting the reservation</string>
    <string name="cancel">cancel</string>
    <string name="confirn2">confirm deleting the reservation</string>
    <string name="confirm1">confirm</string>


    <string name="app_name2">productDetails_page</string>
    <string name="todo">TODO</string>
    <string name="price_10">Price: $10</string>
    <string name="service_details_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit">Service Details: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="book_now">Book Now</string>
    <string name="reservations">Reservations</string>
    <string name="logout">Logout</string>
    <string name="service_title">Service Title</string>
    <string name="customers_reviews">Customers Reviews</string>
    <string name="customers_reviews1">Customers Reviews</string>
    <string name="example_review_1">Example Review 1</string>
    <string name="example_review_2">Example Review 2</string>
    <string name="example_review_3">Example Review 3</string>
    <string name="logout1">logout</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="confirm2">Confirm</string>
    <string name="service_details">Service Details Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="price">Price: $10</string>
    <string name="service_title1">Service Title</string>
    <string name="back1">Back</string>


    <string name="back">Back</string>
    <string name="reservation_information">RESERVATION INFORMATION</string>
    <string name="your_booking_time_is">Your Booking time is:</string>
    <string name="your_reservation_is">Your reservation is:</string>
    <string name="at_taim">Your time:</string>
    <string name="_6_30pm">12:00pm</string>
    <string name="_21_3_2024">19/4/2024</string>
    <string name="at_home">At Home</string>
    <string name="at_the_blissful_touch">At The Spa</string>
    <string name="cancle">Cancel</string>
    <string name="enter_reservation_date">Enter reservation date</string>
    <string name="todo2">TODO</string>
    <string name="registration_form">Registration Form</string>
    <string name="enter_reservation_date2">Enter reservation date</string>
    <string name="_6_30pm2">6:30pm</string>
    <string name="at_home2">At Home</string>
    <string name="at_the_blissful_touch2">At The spa</string>
    <string name="cancle2">Cancel</string>
    <string name="registration_form2">Registration Form</string>
    <string name="enter_reservation_dat">Enter reservation date</string>
    <string name="enter_reservation_da">Enter reservation date</string>
    <string name="todo3">TODO</string>
    <string name="location2">Location:</string>
    <string name="todo4">TODO</string>
    <string name="search" />
    <string name="enter_search_query">Enter search query</string>
    <string name="name">name</string>
    <string name="search1">search</string>
    <string name="my_reservations1">My Reservations</string>
    <string name="no_booking_to_view">No booking to view</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_reservation_time">enter_reservation_time</string>
    <string name="enter_reservation_time1">enter reservation time</string>
    <string name="search_here">Search here...</string>
    <string name="my_reservations2">My reservations</string>
    <string name="log_out">log-out</string>


</resources>