<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".productDetails">

    <!-- Header with back arrow -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/lightgrey"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="?attr/actionBarTheme">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/app_name2"
            android:onClick="onBackPressed"
            android:src="@android:drawable/arrow_up_float"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    </androidx.appcompat.widget.Toolbar>

    <!-- Image of the service -->
    <ImageView
        android:id="@+id/img_service"
        android:layout_width="match_parent"
        android:layout_height="269dp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/blissful_touch" />


    <!-- Title of the service -->
    <TextView
        android:id="@+id/tv_service_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_service"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/service_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Price and details -->
    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_service_title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/price_10"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_price"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/service_details_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit" />
    <!-- Rating -->
    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_details"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <!-- Button for booking -->
    <Button
        android:id="@+id/btn_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rating_bar"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/babyPink"
        android:text="@string/book_now"
        android:textColor="#424242" />

    <!-- Reviews -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_book"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_reviews_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/customers_reviews1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Example Reviews -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/example_review_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/example_review_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/example_review_3" />


    </LinearLayout>

    <!-- Footer navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-3dp"
        android:background="#ffffff"
        app:menu="@menu/menu" />
</RelativeLayout>
